--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite",
+  "name": "github-indent-rainbow",
   "version": "0.0.1",
-  "description": "chrome extension boilerplate",
+  "description": "A simple chrome extension to make indentation of GitHub source code readable",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+    "url": "https://github.com/ot07/chrome-extension-github-indent-rainbow.git"
   },
   "scripts": {
     "build": "tsc --noEmit && vite build",
