--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "singleQuote": false,
+  "singleQuote": true,
   "trailingComma": "es5",
   "requirePragma": false,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "useTabs": false
 }
