--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "dependencies": {
     "detect-indent": "^7.0.1",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
