--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "detect-indent": "^7.0.1",
     "formik": "^2.2.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.5.0",
